// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`extend integration (eval -> toString) > extend-chaining.less AST shape: same nodes and selector shapes as parsed (start through @media (tv)) 1`] = `
"(Rules
  rules:
    [
      (Comment '//very simple chaining')
      (Ruleset
        selector:
          (BasicSelector '.a')
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.b')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.a')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.c')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.b')
                )
              ]
          )
      )
      (Comment '//very simple chaining, ordering not important')
      (Ruleset
        selector:
          (BasicSelector '.d')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.e')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.e')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.f')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.f')
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Comment '//extend with all')
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (BasicSelector '.g')
                (BasicSelector '.h')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (BasicSelector '.i')
                (BasicSelector '.j')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.g')
                )
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'inherit')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.k')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.i')
                )
              ]
          )
      )
      (Comment '//extend multi-chaining')
      (Ruleset
        selector:
          (BasicSelector '.l')
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.m')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.l')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.n')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.m')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.o')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.n')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.p')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.o')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.q')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.p')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.r')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.q')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.s')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.r')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.t')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.s')
                )
              ]
          )
      )
      (Comment '// self referencing is ignored')
      (Ruleset
        selector:
          (BasicSelector '.u')
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (BasicSelector '.v')
                (BasicSelector '.u')
                (BasicSelector '.v')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.u')
                )
              ]
          )
      )
      (Comment '// circular reference because the new extend product will match the existing extend')
      (Ruleset
        selector:
          (BasicSelector '.w')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.w')
                )
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (BasicSelector '.v')
                (BasicSelector '.w')
                (BasicSelector '.v')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.w')
                )
              ]
          )
      )
      (Comment '// classic circular references')
      (Ruleset
        selector:
          (BasicSelector '.x')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.z')
                )
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'x')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.y')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.x')
                )
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'y')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.z')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.y')
                )
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'z')
                )
              ]
          )
      )
      (Comment '//very simple chaining, but with the extend inside the ruleset')
      (Ruleset
        selector:
          (BasicSelector '.va')
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.vb')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.va')
                )
                (Nil '')
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'inherit')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.vc')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.vb')
                )
                (Nil '')
              ]
          )
      )
      (Comment '// media queries - don\\'t extend outside, do extend inside')
      (AtRule
        name:
          (Any '@media')
        prelude:
          (Paren
            node:
              (QueryCondition
                value:
                  [
                    (Keyword [role=keyword] 'tv')
                  ]
              )
          )
        rules:
          (Rules
            rules:
              [
                (Ruleset
                  selector:
                    (BasicSelector '.ma')
                  rules:
                    (Rules
                      rules:
                        [
                          (Extend
                            target:
                              (SelectorList
                                selectors:
                                  [
                                    (BasicSelector '.a')
                                    (BasicSelector '.b')
                                    (BasicSelector '.c')
                                    (BasicSelector '.d')
                                    (BasicSelector '.e')
                                    (BasicSelector '.f')
                                    (BasicSelector '.g')
                                    (BasicSelector '.h')
                                    (BasicSelector '.i')
                                    (BasicSelector '.j')
                                    (BasicSelector '.k')
                                    (BasicSelector '.l')
                                    (BasicSelector '.m')
                                    (BasicSelector '.n')
                                    (BasicSelector '.o')
                                    (BasicSelector '.p')
                                    (BasicSelector '.q')
                                    (BasicSelector '.r')
                                    (BasicSelector '.s')
                                    (BasicSelector '.t')
                                    (BasicSelector '.u')
                                    (BasicSelector '.v')
                                    (BasicSelector '.w')
                                    (BasicSelector '.x')
                                    (BasicSelector '.y')
                                    (BasicSelector '.z')
                                    (BasicSelector '.md')
                                  ]
                              )
                          )
                          (Declaration
                            name:
                              (Any [role=property] 'color')
                            value:
                              (Color
                                node: 'black'
                              )
                          )
                        ]
                    )
                )
                (Ruleset
                  selector:
                    (BasicSelector '.md')
                  rules:
                    (Rules
                      rules:
                        [
                          (Declaration
                            name:
                              (Any [role=property] 'color')
                            value:
                              (Any 'inherit')
                          )
                        ]
                    )
                )
                (AtRule
                  name:
                    (Any '@media')
                  prelude:
                    (Paren
                      node:
                        (QueryCondition
                          value:
                            [
                              (Keyword [role=keyword] 'plasma')
                            ]
                        )
                    )
                  rules:
                    (Rules
                      rules:
                        [
                          (Rules
                            rules:
                              [
                                (Extend
                                  selector:
                                    (SelectorList
                                      selectors:
                                        [
                                          (BasicSelector '.me')
                                          (BasicSelector '.mf')
                                        ]
                                    )
                                  target:
                                    (SelectorList
                                      selectors:
                                        [
                                          (BasicSelector '.mb')
                                          (BasicSelector '.md')
                                        ]
                                    )
                                )
                                (Ruleset
                                  selector:
                                    (SelectorList
                                      selectors:
                                        [
                                          (BasicSelector '.me')
                                          (BasicSelector '.mf')
                                        ]
                                    )
                                  rules:
                                    (Rules
                                      rules:
                                        [
                                          (Nil '')
                                          (Declaration
                                            name:
                                              (Any [role=property] 'background')
                                            value:
                                              (Color
                                                node: 'red'
                                              )
                                          )
                                        ]
                                    )
                                )
                              ]
                          )
                        ]
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.mb')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.ma')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.mc')
        rules:
          (Rules
            rules:
              [
                (Extend
                  target:
                    (BasicSelector '.mb')
                )
              ]
          )
      )
    ]
)"
`;

exports[`extend integration (eval -> toString) > extend-chaining.less AST shape: same nodes and selector shapes as parsed (start through @media (tv)) 2`] = `
"(Rules
  rules:
    [
      (Comment '//very simple chaining')
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.a')
                (BasicSelector '.b')
                (BasicSelector '.c')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.b')
                (BasicSelector '.c')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.c')
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Comment '//very simple chaining, ordering not important')
      (Ruleset
        selector:
          (BasicSelector '.d')
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.e')
                (BasicSelector '.d')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.f')
                (BasicSelector '.e')
                (BasicSelector '.d')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Comment '//extend with all')
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      selectors:
                        [
                          (BasicSelector '.g')
                          (CompoundSelector
                            components:
                              [
                                (PseudoSelector
                                  name: ':is'
                                  arg:
                                    (SelectorList
                                      selectors:
                                        [
                                          (BasicSelector '.i')
                                          (BasicSelector '.k')
                                        ]
                                    )
                                )
                                (BasicSelector '.j')
                              ]
                          )
                        ]
                    )
                )
                (BasicSelector '.h')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      selectors:
                        [
                          (BasicSelector '.i')
                          (BasicSelector '.k')
                        ]
                    )
                )
                (BasicSelector '.j')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'inherit')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.k')
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Comment '//extend multi-chaining')
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.l')
                (BasicSelector '.m')
                (BasicSelector '.n')
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.m')
                (BasicSelector '.n')
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.n')
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.o')
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.p')
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.q')
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.r')
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.s')
                (BasicSelector '.t')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.t')
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Comment '// self referencing is ignored')
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.u')
                (CompoundSelector
                  components:
                    [
                      (BasicSelector '.v')
                      (BasicSelector '.u')
                      (BasicSelector '.v')
                    ]
                )
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (BasicSelector '.v')
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      selectors:
                        [
                          (BasicSelector '.u')
                          (CompoundSelector
                            components:
                              [
                                (BasicSelector '.v')
                                (BasicSelector '.u')
                                (BasicSelector '.v')
                              ]
                          )
                        ]
                    )
                )
                (BasicSelector '.v')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Comment '// circular reference because the new extend product will match the existing extend')
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.w')
                (CompoundSelector
                  components:
                    [
                      (BasicSelector '.v')
                      (BasicSelector '.w')
                      (BasicSelector '.v')
                    ]
                )
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (CompoundSelector
            components:
              [
                (BasicSelector '.v')
                (PseudoSelector
                  name: ':is'
                  arg:
                    (SelectorList
                      selectors:
                        [
                          (BasicSelector '.w')
                          (CompoundSelector
                            components:
                              [
                                (BasicSelector '.v')
                                (BasicSelector '.w')
                                (BasicSelector '.v')
                              ]
                          )
                        ]
                    )
                )
                (BasicSelector '.v')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Comment '// classic circular references')
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.x')
                (BasicSelector '.y')
                (BasicSelector '.z')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'x')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.y')
                (BasicSelector '.z')
                (BasicSelector '.x')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'y')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.z')
                (BasicSelector '.x')
                (BasicSelector '.y')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'z')
                )
              ]
          )
      )
      (Comment '//very simple chaining, but with the extend inside the ruleset')
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.va')
                (BasicSelector '.vb')
                (BasicSelector '.vc')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Color
                      node: 'black'
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.vb')
                (BasicSelector '.vc')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
                (Nil '')
                (Declaration
                  name:
                    (Any [role=property] 'color')
                  value:
                    (Any 'inherit')
                )
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.vc')
        rules:
          (Rules
            rules:
              [
                (Nil '')
                (Nil '')
              ]
          )
      )
      (Comment '// media queries - don\\'t extend outside, do extend inside')
      (AtRule
        name:
          (Any '@media')
        prelude:
          (Paren
            node:
              (QueryCondition
                value:
                  [
                    (Keyword [role=keyword] 'tv')
                  ]
              )
          )
        rules:
          (Rules
            rules:
              [
                (Ruleset
                  selector:
                    (SelectorList
                      selectors:
                        [
                          (BasicSelector '.ma')
                          (BasicSelector '.mb')
                          (BasicSelector '.mc')
                        ]
                    )
                  rules:
                    (Rules
                      rules:
                        [
                          (Nil '')
                          (Declaration
                            name:
                              (Any [role=property] 'color')
                            value:
                              (Color
                                node: 'black'
                              )
                          )
                        ]
                    )
                )
                (Ruleset
                  selector:
                    (SelectorList
                      selectors:
                        [
                          (BasicSelector '.md')
                          (BasicSelector '.ma')
                          (BasicSelector '.mb')
                          (BasicSelector '.mc')
                        ]
                    )
                  rules:
                    (Rules
                      rules:
                        [
                          (Declaration
                            name:
                              (Any [role=property] 'color')
                            value:
                              (Any 'inherit')
                          )
                        ]
                    )
                )
                (AtRule
                  name:
                    (Any '@media')
                  prelude:
                    (Paren
                      node:
                        (QueryCondition
                          value:
                            [
                              (Keyword [role=keyword] 'plasma')
                            ]
                        )
                    )
                  rules:
                    (Rules
                      rules:
                        [
                          (Rules
                            rules:
                              [
                                (Nil '')
                                (Ruleset
                                  selector:
                                    (SelectorList
                                      selectors:
                                        [
                                          (BasicSelector '.me')
                                          (BasicSelector '.mf')
                                        ]
                                    )
                                  rules:
                                    (Rules
                                      rules:
                                        [
                                          (Nil '')
                                          (Declaration
                                            name:
                                              (Any [role=property] 'background')
                                            value:
                                              (Color
                                                node: 'red'
                                              )
                                          )
                                        ]
                                    )
                                )
                              ]
                          )
                        ]
                    )
                )
              ]
          )
      )
      (Ruleset
        selector:
          (SelectorList
            selectors:
              [
                (BasicSelector '.mb')
                (BasicSelector '.mc')
              ]
          )
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
      (Ruleset
        selector:
          (BasicSelector '.mc')
        rules:
          (Rules
            rules:
              [
                (Nil '')
              ]
          )
      )
    ]
)"
`;
